# StreamJson

./: LICENSE  README.md  main.py  pyproject.toml  test.json
streamjson/: __init__.py  main.py
