[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamjson"
version = "0.1.0"
description = "A streaming JSON parser that supports chunked input and real-time output"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Marven11", email = "110723864+Marven11@users.noreply.github.com"}
]
keywords = ["json", "streaming", "parser", "incremental"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/username/streamjson"
"Bug Tracker" = "https://github.com/username/streamjson/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "isort",
    "mypy",
]

[tool.hatch.build]
include = [
    "streamjson/**/*.py",
    "README.md",
    "LICENSE",
]

[tool.hatch.version]
path = "streamjson/__init__.py"